# ReplyRobin

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  main.py  pyproject.toml
0_ingestion_pipeline/: fetcher.py  schemas.py
agent_orchestration/: character_profile.py
agent_orchestration/draft_agent/: agent.py  respone_schema.py  system_prompt.py
agent_orchestration/judge_agent/: agent.py  system_prompt.py
agent_orchestration/master_agent/: orchestrator.py  state.py  worker.py
agent_orchestration/planner_agent/: agent.py  respone_schema.py  system_prompt.py
alembic/: env.py
alembic/versions/: 10f770e1afc3_.py  e878776f25d0_.py
character_agent/: mimic.py  multi_agent.py  understand_agent.py
character_agent/draft_agent/: respone_schema.py
character_agent/judge_agent/: agent.py  respone_schema.py  system_prompt.py
character_agent/master_agent/: orchestrator.py
character_agent/planner_agent/: agent.py  respone_schema.py  system_prompt.py
common/: db.py  schemas.py
data_enrichment/: intent_examples.py  intent_extractor.py  processor.py  stylometry_signal_examples.py  stylometry_signal_extractor.py
db/: __init__.py  handlers.py  schemas.py  singleton.py
evals/: base_eval.py  customer_support.py  eval.py
ingestion_pipeline/: db.py  fetcher.py  gmail_fetcher.py  schemas.py
ingestion_pipeline/semantic_effort/: qwen.py  vector_embeeding.py
jobs/: pre_checks.py  scheduler.py
local_auth/: auth.py  manage_secret_file.py
reasoning_agent/: agent.py  schemas.py  tools.py
scripts/: setup-postgres.sh
