[project]
name = "replyrobin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.171.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.3",
    "sqlmodel>=0.0.19",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "beautifulsoup4>=4.13.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
