[project]
name = "replyrobin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.171.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.3",
    "sqlmodel>=0.0.19",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "beautifulsoup4>=4.13.4",
    "langchain[google-genai]>=0.3.25",
    "llama-index>=0.12.42",
    "llama-index-llms-gemini>=0.5.0",
    "langchain-google-genai>=2.0.10",
    "talon>=1.4.4",
    "langgraph>=0.4.8",
    "langchain-community>=0.3.25",
    "langchain-experimental>=0.3.4",
    "grandalf>=0.8",
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0",
    "accelerate>=1.8.1",
    "pgvector>=0.4.1",
    "langsmith>=0.3.45",
    "openevals>=0.1.0",
    "openai>=1.88.0",
    "schedule>=1.2.2",
    "sqlalchemy-migrate>=0.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
